--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,7 +82,7 @@ en:
   select_locale: "Change your Locale"
 
   # footer
-  powered_by: "Powered by Helpy. An Open Source Helpdesk."
+  powered_by: "Copyright © 2018 Mentor."
   get_your_copy: "Grab your copy on GitHub"
   version: "Version:"
 
